--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -34,11 +35,13 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
+
         },
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+        "files" : ["app/Helper/helper.php"]
     },
     "autoload-dev": {
         "psr-4": {
